feat:ajuste na descrição das rotas
